# halpmesort

./: .gitignore  README.md  pyproject.toml
halp_me_sort/: cli.py  config.py  halp.py  halp_deduplicate.py  halp_folders.py  halp_sort.py  halp_sort_ebooks.py  halp_unwanted_files.py  halpers.py
