[tool.poetry]
name = "halp_me_sort"
version = "0.1.6"
description = "Halp Me Sort is a simple and quite idiosyncratic CLI tool that, first and foremost, sorts all files within a folder into folders based on file type."
authors = ["Ingo Kleiber <ikleiber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pypdf = "^3.17.0"
importlib-metadata = "^8.4.0"

[tool.poetry.scripts]
halp-me-sort = "halp_me_sort.cli:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
